--- a/app/views/checkins/overview.haml
+++ b/app/views/checkins/overview.haml
@@ -1,10 +1,36 @@
 !!!
 %html
   %head
+    :css
+      .chart {
+        width: 100%;
+      }
+      
+      .row {
+        text-align: center;
+        margin-bottom: 50px;
+      }
+      
+      #overview_chart {
+        height: 600px;
+      }
+      
+      #geo_chart, 
+      #state_chart {
+        width: 1000px;
+        height: 400px;
+      }
+      
+      #abv_container {
+        text-align: center;
+        margin-left: 100px;
+        margin-right: 100px;
+      }
+            
     %script{:type => "text/javascript", :src => "https://www.google.com/jsapi" }
     :javascript
       // Load the Visualization API and the piechart package.
-      google.load('visualization', '1.0', {'packages':['corechart', 'geochart']});
+      google.load('visualization', '1.0', {'packages':['corechart', 'geochart', 'gauge']});
 
       // Set a callback to run when the Google Visualization API is loaded.
       google.setOnLoadCallback(drawChart);
@@ -41,6 +67,12 @@
           vAxes: [
             { title: "Daily Count"},
             { title: "Running Total"}
+          ],
+          colors: [
+            'RED',
+            'BLUE',
+            'GREEN',
+            'ORANGE'
           ]
         };
 
@@ -50,9 +82,40 @@
         var geo_data = google.visualization.arrayToDataTable(#{@geo_data.to_a.to_json});
         var geo_chart = new google.visualization.GeoChart(document.getElementById('geo_chart'));
         geo_chart.draw(geo_data, {});
+        
+        var state_data = google.visualization.arrayToDataTable(#{@state_data.to_a.to_json});
+        var state_chart = new google.visualization.GeoChart(document.getElementById('state_chart'));
+        state_chart.draw(state_data, { 
+          region: 'US',
+          resolution: 'provinces'
+        });
+        
+        
+        var abv_data = google.visualization.arrayToDataTable(#{@abv_data.to_a.to_json})
+        var abv_chart = new google.visualization.Gauge(document.getElementById('abv_chart'));
+        abv_chart.draw(abv_data, {
+          min: 0,
+          max: 10,
+          yellowFrom: 5,
+          yellowTo: 7,
+          redFrom: 7,
+          redTo: 10
+        });          
       }
 
   %body
-    #overview_chart{:style => "width: 100%; height: 600px"}
-    #geo_chart{:width=>"400px", :height => "300px"}
+    .row
+      %h2 Overview
+      #overview_chart.chart
+
+    #abv_container.row
+      %h2 Average Alcohol By Volume (%)
+      #abv_chart
+      
+        
+
+    #geo_container.row
+      %h2 Beers of the World (#)
+      #state_chart.chart
+      #geo_chart.chart
     
