--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -1,6 +1,11 @@
 !!!
 %html
   %head
-  
-  %body
+    %title Leaderbeerd
+    %link{:rel => "stylesheet", :href => "/stylesheets/bootstrap.min.css"}
+    %link{:rel => "stylesheet", :href => "/stylesheets/styles.css"}
+    %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
+    %script{:src=>"/javascripts/bootstrap.min.js"}
+    
+  %body{"data-spy" => "scroll", "data-target" => ".navbar"}
     = yield
