--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title Leaderbeerd
+    %link{:rel=>"shortcut icon", :type=>"image/x-icon", :href=>"/favicon.ico"}
     %link{:rel => "stylesheet", :href => "/stylesheets/bootstrap.min.css"}
     %link{:rel => "stylesheet", :href => "/stylesheets/styles.css"}
     %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
