fixed handle selection bug, added assets

--- a/app/views/checkins/list.haml
+++ b/app/views/checkins/list.haml
@@ -2,7 +2,7 @@
   .navbar-inner
     .container
       %a.brand{:href => "/"} 
-        %img.logo{:src => "/images/logo.png"}
+        %img.logo{:src => "//assets.leaderbeerd.com/images/logo.png"}
         Leaderbeerd
 
 .checkin_list
