--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -3,10 +3,10 @@
   %head
     %title Leaderbeerd
     %link{:rel=>"shortcut icon", :type=>"image/x-icon", :href=>"/favicon.ico"}
-    %link{:rel => "stylesheet", :href => "/stylesheets/bootstrap.min.css"}
-    %link{:rel => "stylesheet", :href => "/stylesheets/styles.css"}
+    %link{:rel => "stylesheet", :href => "//assets.leaderbeerd.com/stylesheets/bootstrap.min.css"}
+    %link{:rel => "stylesheet", :href => "//assets.leaderbeerd.com/stylesheets/styles.css"}
     %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
-    %script{:src=>"/javascripts/bootstrap.min.js"}
+    %script{:src=>"//assets.leaderbeerd.com/javascripts/bootstrap.min.js"}
     
   %body{"data-spy" => "scroll", "data-target" => ".navbar"}
     = yield
