--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Leaderbeerd
+    %title #{@page_title || "Leaderbeerd"}
     %link{:rel=>"shortcut icon", :type=>"image/x-icon", :href=>"/favicon.ico"}
     %link{:rel => "stylesheet", :href => "#{Leaderbeerd::Config.asset_host}/stylesheets/bootstrap.min.css"}
     %link{:rel => "stylesheet", :href => "#{Leaderbeerd::Config.asset_host}/stylesheets/styles.css"}
