--- a/app/views/checkins/overview.haml
+++ b/app/views/checkins/overview.haml
@@ -5,16 +5,34 @@
 
   
   var overview_chart;
+  var geo_chart;
+  var geo_data;
+  var state_chart;
+  var state_data;
   var control;
-  var selection;
-  function handleSelection() {
-    selection = overview_chart.getChart().getSelection()[0];
+  
+  function handleOverviewSelection() {
+    var selection = overview_chart.getChart().getSelection()[0];
     var data = overview_chart.getDataTable();
     var username = data.getColumnLabel(selection.column);
     var date = data.getValue(selection.row, 0);
     var dateStr = date.getFullYear() + "-" + (date.getMonth() + 1) + "-" + date.getDate();
     
     window.location = "/checkins?start_date=" + dateStr  + "&username[]=" + username;
+  }
+  
+  function handleGeoSelection() {
+    console.log(geo_data);
+    var selection = geo_chart.getSelection()[0];
+    var country = geo_data.getValue(selection.row, 0);
+    window.location = "/checkins?country=" + country;
+  }
+
+  function handleStateSelection() {
+    var selection = state_chart.getSelection()[0];
+    var state = state_data.getValue(selection.row, 0);;
+    
+    window.location = "/checkins?state=" + state;
   }
 
   function drawChart() {
@@ -113,22 +131,26 @@
     dashboard.bind(control, overview_chart)
     dashboard.draw(overview_data)
     
-    google.visualization.events.addListener(overview_chart, 'select', handleSelection)
+    google.visualization.events.addListener(overview_chart, 'select', handleOverviewSelection)
 
-    var geo_data = google.visualization.arrayToDataTable(#{@geo_data.to_a.to_json});
-    var geo_chart = new google.visualization.GeoChart(document.getElementById('geo_chart'));
+    //GEO
+    geo_chart = new google.visualization.GeoChart(document.getElementById('geo_chart'));
+    geo_data = google.visualization.arrayToDataTable(#{@geo_data.to_a.to_json});
     var geo_options = {
       legend: 'none'
     }
     geo_chart.draw(geo_data, geo_options);
+    google.visualization.events.addListener(geo_chart, 'select', handleGeoSelection)
 
-    var state_data = google.visualization.arrayToDataTable(#{@state_data.to_a.to_json});
-    var state_chart = new google.visualization.GeoChart(document.getElementById('state_chart'));
+    //state
+    state_chart = new google.visualization.GeoChart(document.getElementById('state_chart'));
+    state_data = google.visualization.arrayToDataTable(#{@state_data.to_a.to_json});
     state_chart.draw(state_data, { 
       region: 'US',
       resolution: 'provinces',
       legend: 'none'
     });
+    google.visualization.events.addListener(state_chart, 'select', handleStateSelection)
 
 
     var abv_data = google.visualization.arrayToDataTable(#{@abv_data.to_a.to_json})
@@ -142,7 +164,8 @@
       redColor: '#b94a48',
       redFrom: 7,
       redTo: 10
-    });          
+    });
+    
   }
 
   // Set a callback to run when the Google Visualization API is loaded.
@@ -164,7 +187,9 @@
 
 .overview
   .alert.alert-success.fade.in
-    #{@most_recent_checkin.username} checked in #{@most_recent_checkin.beer_name}
+    #{@most_recent_checkin.username} checked in 
+    %a{:href => "/checkins/#{@most_recent_checkin.checkin_id}"}
+      #{@most_recent_checkin.beer_name}
     %a.close{:href => "", "data-dismiss" => "alert"}x
   #dashboard
     #overview_container.row
@@ -175,6 +200,9 @@
   #abv_container.row
     %h2 Average Alcohol By Volume (%)
     #abv_chart
+
+  #style_and_brewery_container.row
+    
 
   #geo_container.row
     %h2 Beers of the World (#)
