checked in user specific app changes and ability to filter by users

--- a/app/views/checkins/list.haml
+++ b/app/views/checkins/list.haml
@@ -19,7 +19,8 @@
         
     - @checkins.each do |checkin|
       .checkin.well
-        .capped.tooltip_trigger{:class => case checkin.rating when 0..2 then "bad"; when 3 then "ok"; end, "data-title" => "#{checkin.rating}/5"}
+        - if checkin.rating != 0
+          .capped.tooltip_trigger{:class => case checkin.rating when 0..2 then "bad"; when 3 then "ok"; end, "data-title" => "#{checkin.rating}/5"}
         - if checkin.toast_count > 0
           .toasted.tooltip_trigger{"data-title" => "Toasted"}
         - unless checkin.venue_id.nil?
