--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -6,6 +6,7 @@
     %link{:rel => "stylesheet", :href => "#{Leaderbeerd::Config.asset_host}/stylesheets/bootstrap.min.css"}
     %link{:rel => "stylesheet", :href => "#{Leaderbeerd::Config.asset_host}/stylesheets/styles.css"}
     %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
+    %script{:src=>"//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"}
     %script{:src=>"#{Leaderbeerd::Config.asset_host}/javascripts/bootstrap.min.js"}
     
   %body{"data-spy" => "scroll", "data-target" => ".navbar"}
