--- a/app/views/layout.haml
+++ b/app/views/layout.haml
@@ -1,10 +1,10 @@
 !!!
 %html
   %head
-    %title #{@page_title || "Leaderbeerd"}
+    %title Leaderbeerd #{" - #{@page_title}" if @page_title }
     %link{:rel=>"shortcut icon", :type=>"image/x-icon", :href=>"/favicon.ico"}
     %link{:rel => "stylesheet", :href => "#{Leaderbeerd::Config.asset_host}/stylesheets/bootstrap.min.css"}
-    %link{:rel => "stylesheet", :href => "#{Leaderbeerd::Config.asset_host}/stylesheets/styles.css"}
+    %link{:rel => "stylesheet", :href => "#{Leaderbeerd::Config.asset_host}/stylesheets/styles.css?v=1"}
     %script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
     %script{:src=>"//ajax.googleapis.com/ajax/libs/jqueryui/1.10.0/jquery-ui.min.js"}
     %script{:src=>"#{Leaderbeerd::Config.asset_host}/javascripts/bootstrap.min.js"}
